added two new categories

--- a/skill-exchange/src/styles/components/MacroCategory.scss
+++ b/skill-exchange/src/styles/components/MacroCategory.scss
@@ -59,6 +59,10 @@
       color: $icon-orange;
     }
 
+    .color--brown {
+      color: $icon-brown;
+    }
+
     .macrocategory-description {
       flex: 1;
       font-family: $font-family-text;
