--- a/skill-exchange/src/styles/loggedInPages/SubCategory.scss
+++ b/skill-exchange/src/styles/loggedInPages/SubCategory.scss
@@ -39,6 +39,10 @@
             .color-orange {
                 color: $icon-orange;
             }
+
+            .color-brown {
+                color: $icon-brown;
+            }
         }
 
         &__skill {
@@ -63,4 +67,28 @@
             border-bottom-left-radius: 0;
         }
     }
+
+    &--main {
+        min-height: 200px;
+        padding: $spacing-xxl $spacing-lg;
+        color: $white;
+        text-align: center;
+        font-family: $font-family-heading;
+        background-color: #46879f;
+
+        &__heading {
+            font-size: $font-size-xxl;
+        }
+    }
+
+    &--listing {
+        width: 90%;
+        margin: 0 auto;
+        padding: $spacing-md;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 20px;
+    }
+
+
 }
