--- a/skill-exchange/src/styles/variables.scss
+++ b/skill-exchange/src/styles/variables.scss
@@ -31,6 +31,8 @@ $icon-yellow: #f0ba17;
 $icon-blue: #223c9d;
 $icon-green: #0f8c30;
 $icon-red: #e22002;
+$icon-brown: #691F1F;
+$icon-dark: #37474F;
 
 /* Font Size Variables */
 $font-size-small: 14px; /* Small font size */
