--- a/skill-exchange/src/styles/loggedInPages/SubCategory.scss
+++ b/skill-exchange/src/styles/loggedInPages/SubCategory.scss
@@ -39,10 +39,13 @@
             .color-orange {
                 color: $icon-orange;
             }
-
             .color-brown {
                 color: $icon-brown;
             }
+            .color-dark-blue {
+                color: $icon-dark-blue
+            }
+            
         }
 
         &__skill {
