--- a/skill-exchange/src/styles/loggedInPages/SubCategory.scss
+++ b/skill-exchange/src/styles/loggedInPages/SubCategory.scss
@@ -17,6 +17,27 @@
         overflow: hidden; /* Prevent text overflow */
         word-wrap: break-word; /* Break long words to fit within the container */
 
+        .breadcrumbs {
+            display: flex;
+            align-items: center;
+  
+            &__item {
+              text-decoration: underline;
+              text-transform: capitalize;
+              color: inherit;
+              cursor: pointer;
+  
+            }
+  
+            &__separator {
+              margin: 0 0.5rem;
+            }
+  
+            &__item--color {
+              font-weight: bold;
+            }
+        }
+
         &__title {
             font-size: $font-size-xxl;
             text-align: left;
@@ -68,19 +89,6 @@
             border-bottom-right-radius: $border-radius;
             border-top-left-radius: 0;
             border-bottom-left-radius: 0;
-        }
-    }
-
-    &--main {
-        min-height: 200px;
-        padding: $spacing-xxl $spacing-lg;
-        color: $white;
-        text-align: center;
-        font-family: $font-family-heading;
-        background-color: #46879f;
-
-        &__heading {
-            font-size: $font-size-xxl;
         }
     }
 
