added sports and fitness icon to banner

--- a/skill-exchange/src/styles/loggedInPages/Dashboard.scss
+++ b/skill-exchange/src/styles/loggedInPages/Dashboard.scss
@@ -108,6 +108,7 @@
             padding: 0 $spacing-sm;
             width: 90%;
             scroll-behavior: smooth;
+            background-color: #ebf2ff;
 
             // Hide scrollbar
             scrollbar-width: none; // Firefox
