--- a/skill-exchange/src/styles/loggedInPages/SubCategories.scss
+++ b/skill-exchange/src/styles/loggedInPages/SubCategories.scss
@@ -33,7 +33,7 @@
         color: #6ac5f5;
     }
     &--banner.color-red {
-        background-image: url("../../../public/sports-and-fitness-banner.svg");
+        background-image: url("../../../public/languages-banner.svg");
         color: #ef8678;
     }
     &--banner.color-yellow {
@@ -49,7 +49,7 @@
         color: #37b762;
     }
     &--banner.color-purple {
-        background-image: url("../../../public/sports-and-fitness-banner.svg");
+        background-image: url("../../../public/coding-banner.svg");
         color: #ae93f3;
     }
     &--banner.color-brown {
@@ -57,7 +57,7 @@
         color: #4d4040;
     }
     &--banner.color-dark-blue {
-        background-image: url("../../../public/sports-and-fitness-banner.svg");
+        background-image: url("../../../public/talking-banner.svg");
         color: #0d2e61;
     }
         
