--- a/skill-exchange/src/styles/components/Map.scss
+++ b/skill-exchange/src/styles/components/Map.scss
@@ -3,9 +3,13 @@
 .map-container {
     width: 100%;
     flex: 0 0 65%;
+    position: relative;
+    overflow: visible;
     #map {
         width: 100%;
         height: 100vh;
+        position: sticky;
+        top: 0;
       }
   
       /* Map Marker Styles */
