--- a/skill-exchange/src/styles/variables.scss
+++ b/skill-exchange/src/styles/variables.scss
@@ -33,6 +33,8 @@ $icon-green: #0f8c30;
 $icon-red: #e22002;
 $icon-brown: #691F1F;
 $icon-dark-blue: #40757D;
+$subscribe-color-background: #122055;
+$subscribe-color-heading: #f8c83b;
 
 /* Font Size Variables */
 $font-size-small: 14px; /* Small font size */
