--- a/skill-exchange/src/styles/loggedInPages/Subscribe.scss
+++ b/skill-exchange/src/styles/loggedInPages/Subscribe.scss
@@ -2,54 +2,68 @@
 
 .subscribe-container {
     text-align: center;
-    background-color: $color-background;
-    padding: 40px;
-    border-radius: $border-radius;
+    background-color: $subscribe-color-background;
+    padding: $spacing-lg 0 0;
     box-shadow: $box-shadow;
+    color: $white;
+  }
+
+  .subscribe-icon {
+    font-size: $font-size-xxl;
+    color: $subscribe-color-heading;
   }
   
   .subscribe-heading {
     font-family: 'Playfair Display', serif;
-    font-size: $font-size-heading;
-    color: $primary-color;
+    font-size: $font-size-xxl;
+    color: $subscribe-color-heading;
   }
   
   .subscribe-description {
     font-family: 'Reddit Sans', sans-serif;
     font-size: $font-size-medium;
-    color: $color-text;
     margin-bottom: 30px;
   }
-  
+
   .subscription-plans {
     display: flex;
     justify-content: center;
     gap: 30px;
+    margin-top: $spacing-lg;
   }
   
   .plan {
     background-color: $color-card-background;
     padding: 20px;
     border-radius: $border-radius;
-    box-shadow: $box-shadow;
     text-align: center;
     width: 200px;
-  }
+    cursor: pointer;
+    box-shadow: 0px -3px 0px 2px $black, 0px 3px 0px 2px $black;
+    opacity: 0.5;
+    transition: all 0.3s;
   
-  .plan h2 {
-    font-size: 24px;
-    color: $primary-color;
-  }
+    &.active {
+      opacity: 1;
+      box-shadow: 
+        0px -6px 0px 4px $subscribe-color-heading, 
+        0px 6px 0px 4px $subscribe-color-heading;
+    }
   
-  .price {
-    font-size: 28px;
-    color: $color-text;
-    margin: 20px 0;
+    h2 {
+      font-size: 24px;
+      color: $primary-color;
+    }
+  
+    .price {
+      font-size: 28px;
+      margin: 20px 0;
+      color: $black;
+    }
   }
   
   .subscribe-btn {
     background-color: $primary-color;
-    color: $white;
     border: none;
     padding: 10px 20px;
     border-radius: $border-radius;
@@ -61,41 +75,90 @@
       background-color: $color-primary;
     }
   }
+
+  .disclaimer-price {
+    color: $white;
+    font-size: $font-size-small;
+    margin: $spacing-md 0 $spacing-xxl;
+    padding-bottom: $spacing-lg;
+  }
   
   .features {
-    margin-top: 40px;
-  }
-  
-  .features h3 {
-    font-size: 24px;
-    color: $primary-color;
-  }
-  
-  .features ul {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .features li {
-    font-size: 18px;
-    color: $color-text;
-    margin: 10px 0;
-  }
-  
-  .cta {
-    margin-top: 40px;
-  }
+    padding: $spacing-lg;
+    background-color: $white;
+    color: $black;
+    margin-top: $spacing-lg;
+    padding-bottom: $spacing-xxl;
+
+    h2 {
+        font-size: $font-size-heading;
+        margin-bottom: 20px;
+    }
+
+
+    .comparison-table {
+        margin: 40px auto;
+        max-width: 600px;
+            
+        h4 {
+          font-size: $font-size-large;
+          margin-bottom: 20px;
+        }
+            
+        table {
+          width: 100%;
+          border-collapse: collapse;
+          color: $black;
+          background-color: $white;
+          border-radius: $border-radius;
+          overflow: hidden;
+          box-shadow: $box-shadow;
+            
+          thead {
+            background-color: $subscribe-color-heading;
+            color: $white;
+            
+            th {
+              padding: 10px;
+              text-align: center;
+              font-size: $font-size-medium;
+            }
+          }
+            
+          tbody {
+            tr {
+              &:nth-child(even) {
+                background-color: $light-grey;
+              }
+            
+              td {
+                padding: 10px;
+                text-align: center;
+                font-size: $font-size-small;
+              }
+            }
+          }
+        }
+      }
+    }
   
   .get-started-btn {
-    background-color: $primary-color;
+    min-width: 400px;
     color: $white;
-    padding: 15px 30px;
-    font-size: 20px;
-    border-radius: $border-radius;
+    font-weight: 600;
+    border: none;
+    background-color: #28cc57;
+    padding: $spacing-md;
+    font-size: $font-size-medium;
+    border-radius: 20px;
     cursor: pointer;
-    transition: background-color 0.3s;
+    transition: opacity 0.3s;
+    box-shadow: 0px 4px 0px 2px #15993a;
+    margin-top: $spacing-lg;
+    margin-bottom: $spacing-lg;
   
     &:hover {
-      background-color: $color-primary;
+      opacity: 85%;
     }
+
   }
