improved premium page

--- a/skill-exchange/src/styles/loggedInPages/SubCategories.scss
+++ b/skill-exchange/src/styles/loggedInPages/SubCategories.scss
@@ -8,6 +8,7 @@
         flex-direction: column;
         justify-content: flex-start; // Aligns text to the left
         min-height: 200px;
+        height: 400px;
         padding: $spacing-lg $spacing-xxl;
         color: $white;
         font-family: $font-family-heading;
