--- a/skill-exchange/src/styles/variables.scss
+++ b/skill-exchange/src/styles/variables.scss
@@ -35,6 +35,7 @@ $icon-brown: #691F1F;
 $icon-dark-blue: #40757D;
 $subscribe-color-background: #122055;
 $subscribe-color-heading: #f8c83b;
+$signup-green: #2dd261;
 
 /* Font Size Variables */
 $font-size-small: 14px; /* Small font size */
